# nomad-specs

./: .gitignore  .octopus-tentacle  CLAUDE.md  CONFORMANCE.md  KNOWN_ISSUES.md  MAILBOX.json  README.md  RUST_PCS_FIX.md  TODO.md  docker-compose.yml  justfile
tests/: README.md  __init__.py  conftest.py  pyproject.toml
tests/adversarial/: __init__.py  test_amplification.py  test_e2e_replay.py  test_key_compromise.py  test_key_exhaustion.py  test_mitm_injection.py  test_nonce_reuse.py  test_replay_attack.py  test_replay_attacks.py  test_server_key_exhaustion.py  test_server_mitm_injection.py  test_server_nonce_reuse.py  test_server_replay.py  test_server_replay_attacks.py  test_server_session_hijack.py  test_server_timing_analysis.py  test_server_transport_attacks.py  test_session_hijack.py  test_spec_key_compromise.py  test_spec_replay_attack.py  test_spec_tamper_detection.py  test_tamper_detection.py  test_timing_analysis.py  test_transport_attacks.py
tests/lib/: __init__.py  attacker.py  chaos.py  containers.py  network.py  reference.py
tests/protocol/: __init__.py  test_e2e_handshake.py  test_e2e_keepalive.py  test_e2e_keepalive_simple.py  test_e2e_rekey.py  test_e2e_roaming.py  test_e2e_roaming_simple.py  test_handshake_flow.py  test_keepalive.py  test_keepalive_e2e.py  test_nomad.py  test_nomad_e2e.py  test_server_handshake.py  test_server_keepalive.py  test_server_pcs_rekey.py  test_server_rekey.py  test_server_roaming.py  test_spec_compression.py  test_spec_extension_negotiation.py  test_spec_handshake_flow.py  test_spec_handshake_rekey.py  test_spec_keepalive.py  test_spec_roaming.py  test_spec_sync_properties.py  test_sync_convergence.py  test_sync_edge_cases.py  test_sync_flow.py  test_sync_properties.py  test_sync_resilience.py
tests/resilience/: __init__.py  test_duplication.py  test_e2e_latency.py  test_e2e_packet_loss.py  test_e2e_partition.py  test_e2e_reordering.py  test_e2e_roaming_chaos.py  test_jitter.py
tests/unit/: __init__.py  test_crypto_aead.py  test_crypto_handshake.py  test_crypto_nonce.py  (+17 more)
(+76 files in other folders)
