[project]
name = "nomad-conformance"
version = "0.1.0"
description = "Nomad Protocol conformance test suite"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nomad Protocol Authors" }]

dependencies = [
    # Test framework
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "pytest-xdist>=3.5",  # parallel test execution

    # Property-based testing
    "hypothesis>=6.92",

    # Container orchestration
    "docker>=7.0",
    "python-dotenv>=1.0",

    # Packet inspection (scapy)
    "scapy>=2.5",

    # Reference implementation dependencies (crypto)
    "cryptography>=42.0",
    "pynacl>=1.5",

    # JSON5 for test vectors with comments
    "json5>=0.9",

    # Utilities
    "attrs>=23.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
    "mypy>=1.8",
    "types-docker>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["unit", "protocol", "wire", "interop", "adversarial", "resilience"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "container: tests requiring docker containers",
    "network: tests requiring network access",
    "adversarial: security/fuzzing tests",
    "resilience: network stress and chaos tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:scapy.*",
]
timeout = 60

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = [
    "E501",  # line too long (handled by formatter)
    "TC003", # stdlib imports in type checking block (overly pedantic for Iterator)
    "SIM117",  # nested with statements - more readable for chaos testing
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
